--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -60,6 +60,7 @@
         </footer>
     </div>
 </div>
+{% include cdn/jQuery.html to="body" %}
 {% include cdn/cookieConsent2.html to="body" %}
 {% include cdn/pygments.html to="body" %}
 {% include google_analytics.html %}
