--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,7 @@
     {% include cdn/font-awesome.html to="head" %}
     {% include cdn/cookieConsent2.html to="head" %}
     {% include cdn/pygments.html to="head" %}
+    {% include cdn/facebook.html to="head" %}
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/blog/style.css">
 </head>
@@ -63,6 +64,7 @@
 {% include cdn/jQuery.html to="body" %}
 {% include cdn/cookieConsent2.html to="body" %}
 {% include cdn/pygments.html to="body" %}
+{% include cdn/facebook.html to="body" %}
 {% include google_analytics.html %}
 </body>
 </html>
