--- a/_layouts/blog.post.html
+++ b/_layouts/blog.post.html
@@ -5,5 +5,5 @@ layout: blog
 {% include blog/article.html data=page content=content %}
 
 <div class="fb-comments"
-     data-href="{{ site.url }}{% if page.old_url %}{{ page.old_url }}{% else %}{{ page.url }}{% endif %}"
+     data-href="{% if page.old_url %}{{ page.old_url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}"
      data-numposts="5"></div>
