--- a/assets/web/style.css
+++ b/assets/web/style.css
@@ -1,71 +1,6 @@
-/* fullPage CSS
- * --------------------------------------- */
-#fullPage * {
-    text-align: center;
-}
-
-.fp-controlArrow.fp-prev {
-    border-color: transparent #333 transparent transparent;
-    left: 15px;
-}
-
-.fp-controlArrow.fp-next {
-    border-color: transparent transparent transparent #333;
-    right: 65px;
-}
-
-.section, .section.slider h3 {
-    padding: 5px 100px 5px 50px;
-}
-
-.section.slider h3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-.slide {
-    margin-top: -1.25em;
-}
-
-.section p, .section h2 {
-    font-size: 1em;
-    margin-left: 1em;
-    margin-right: 1em;
-}
-
-.section a {
-    opacity: 0.75;
-}
-
-.section a, .section a:hover {
-    color: inherit;
-}
-
-@media (min-width: 800px) {
-    .section h1 {
-        font-size: 6em;
-    }
-
-    .section h3 {
-        font-size: 5em;
-    }
-
-    .section h4 {
-        font-size: 4em;
-    }
-
-    .section p, .section h2 {
-        font-size: 2em;
-        margin-left: 2em;
-        margin-right: 2em;
-    }
-}
-
-/* Non-fullPage CSS
- * --------------------------------------- */
 .web-footer {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 10pt;
     position: fixed;
     z-index: 70;
     bottom: 0;
