jsdelivr.net replaced by cloudflare.com

--- a/_includes/cdn/reveal.js.html
+++ b/_includes/cdn/reveal.js.html
@@ -1,13 +1,13 @@
 {% if include.to == "head" %}
 <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.7.0/css/reveal.css"
-      integrity="sha384-sWNqQWMO8qDhwZOyrvLKmmhXqE2NzoB8HyF9ZnqChsoqfxDsR9CIZGa3PnET0UYC"
+      href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.7.0/css/reveal.min.css"
+      integrity="sha256-9+Wg2bcNeiOMGXOUNqBdceY2lAH/eCiTDcdzHhHIl48="
       crossorigin="anonymous">
 {% endif %}
 
 {% if include.to == "body" %}
 <script type="application/javascript"
-        src="https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.7.0/js/reveal.js"
-        integrity="sha384-1L4CuJXRxdFK9Gw8RxrnohUzC9xZUayOLvylUkvDW3IWKoGV6kva7IevJK7RLevg"
+        src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.7.0/js/reveal.min.js"
+        integrity="sha256-Xr6ZH+/kc7hDVReZLO5khBknteLqu5oen/xnSraXrVk="
         crossorigin="anonymous"></script>
 {% endif %}
