--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -8,8 +8,8 @@
     {% include cdn/font-awesome.html %}
     {% include cdn/reveal.js.html to="head" %}
     <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.7.0/css/theme/black.css"
-          integrity="sha384-cn9dilqoer4cWsW00FCDy1KoGoUYTsraspG21/OkBdSU4IzGLmis2B/dfq/lWjZH"
+          href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.7.0/css/theme/black.min.css"
+          integrity="sha256-3Hoq40NpqAW/q7nCWxf0n5o6gGPBLyb2Ym0Qb6iVbW4="
           crossorigin="anonymous">
     {% include cdn/cookieConsent2.html to="head" %}
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
