--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -3,7 +3,7 @@
 <head>
     {% include http_headers.html %}
     {% include meta.html %}
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} - {{ page.description }}</title>
     {% include cdn/bootstrap.html to="head" %}
     {% include cdn/font-awesome.html %}
     {% include cdn/cookieConsent2.html to="head" %}
@@ -13,15 +13,15 @@
 <body class="body-web">
 <header class="container">
     <div class="page-header row">
-        <div class="jumbotron col-xs-12 col-sm-12 col-md-9 col-lg-8">
+        <div class="jumbotron col-xs-12 col-sm-12 col-md-10 col-lg-9">
             <h1>{{ page.title }}</h1>
             <p>{{ page.description }}</p>
             <a href="{{ page.cta.link }}" class="btn btn-success btn-lg pull-right">
                 <i class="fa fa-{{ page.cta.icon }}" aria-hidden="true"></i> {{ page.cta.text }}
             </a>
         </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-lg-4">
-            <img src="/assets/web/DM_07317.png" class="img-responsive">
+        <div class="hidden-xs hidden-sm col-md-2 col-lg-3">
+            <img src="/assets/web/ing-petr-knap-more-than-software-engineer-with-experience-and-master-degree.jpg" class="img-responsive" alt="{{ page.title }} - {{ page.description }}">
         </div>
     </div>
 </header>
