--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -8,7 +8,7 @@
     {% include cdn/font-awesome.html %}
     {% include cdn/cookieConsent2.html to="head" %}
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
-    <link rel="stylesheet" href="/assets/web/style.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/web/style.css">
 </head>
 <body class="body-web">
 <header class="container">
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="hidden-xs hidden-sm col-md-2 col-lg-3">
-            <img src="/assets/web/ing-petr-knap-more-than-software-engineer-with-experience-and-master-degree.jpg" class="img-responsive" alt="{{ page.title }} - {{ page.description }}">
+            <img src="{{ site.url }}/assets/web/ing-petr-knap-more-than-software-engineer-with-experience-and-master-degree.jpg" class="img-responsive" alt="{{ page.title }} - {{ page.description }}">
         </div>
     </div>
 </header>
