Fixed assets URL

--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -114,7 +114,7 @@
 {% include cdn/jQuery.html to="body" %}
 {% include cdn/bootstrap.html to="body" %}
 {% include cdn/cookieConsent2.html to="body" %}
-<script type="application/javascript" src="/assets/web/script.js"></script>
+<script type="application/javascript" src="{{ site.url }}/assets/web/script.js"></script>
 {% include google_analytics.html %}
 </body>
 </html>
