--- a/_includes/cdn/cookieConsent2.html
+++ b/_includes/cdn/cookieConsent2.html
@@ -17,10 +17,10 @@
             "container": document.getElementById("CookieConsent"),
             "palette": {
                 "popup": {
-                    "background": "#000"
+                    "background": "#ccc"
                 },
                 "button": {
-                    "background": "#f1d600"
+                    "background": "#333"
                 }
             },
             "showLink": false,
