--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <p>
     <span class="whiteSpaceNowrap">
-        Created on {{ site.created_on }}
-        by <a href="{{ site.author.web }}">{{ site.author.name }}</a>.
+        {{ site.created_on }} - <script>
+            document.write(new Date().getFullYear());
+        </script> <a href="{{ site.author.web }}">{{ site.author.name }}</a>
     </span>
     <span class="whiteSpaceNowrap">
         It's hosted on <a href="https://github.com/" target="_blank">GitHub</a>
