--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -3,7 +3,7 @@
 <head>
     {% include http_headers.html %}
     {% include meta.html %}
-    <title>{{ page.title }} - {{ page.description }}</title>
+    <title>{{ page.title }}</title>
     {% include cdn/bootstrap.html to="head" %}
     {% include cdn/font-awesome.html %}
     {% include cdn/cookieConsent2.html to="head" %}
@@ -14,8 +14,8 @@
 <header class="container">
     <div class="page-header row">
         <div class="jumbotron col-xs-12 col-sm-12 col-md-10 col-lg-9">
-            <h1>{{ page.title }}</h1>
-            <p>{{ page.description }}</p>
+            <h1>{{ page.header.title }}</h1>
+            <p>{{ page.header.description }}</p>
             <a href="{{ page.cta.link }}" class="btn btn-success btn-lg pull-right">
                 <i class="fa fa-{{ page.cta.icon }}" aria-hidden="true"></i> {{ page.cta.text }}
             </a>
