--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -7,6 +7,7 @@
     {% include cdn/bootstrap.html to="head" %}
     {% include cdn/font-awesome.html %}
     {% include cdn/cookieConsent2.html to="head" %}
+    <link rel="icon" href="{{ site.url }}/assets/web/favicon.ico">
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/web/style.css">
 </head>
