Added OG type and image

--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="{{ site.url }}/assets/web/favicon.ico">
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/web/style.css">
+    <meta property="og:type" content="profile" />
+    <meta property="og:image" content="{{ site.url }}/assets/web/ing-petr-knap-more-than-software-engineer-with-experience-and-master-degree.jpg" />
 </head>
 <body class="body-web">
 <header class="container">
