--- a/assets/web/style.css
+++ b/assets/web/style.css
@@ -24,3 +24,18 @@
     position: relative;
     top: 25px;
 }
+
+@media (prefers-color-scheme: dark) {
+    .body-web {
+        background-color: #181818;
+        color: #e9e9e9;
+    }
+
+    img {
+        mix-blend-mode: multiply;
+    }
+
+    .carousel-control, .carousel-indicators {
+        filter: none;
+    }
+}
