--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="{{ site.blog.lang }}">
 <head>
+    {% include cdn/cookieConsent.html to="head" %}
     {% include http_headers.html %}
     {% include meta.html %}
     <title>{% if site.blog.title != page.title %}{{ site.blog.title }} - {% endif %}{{ page.title }}</title>
     {% include cdn/bootstrap.html to="head" %}
     {% include cdn/font-awesome.html to="head" %}
-    {% include cdn/cookieConsent2.html to="head" %}
     {% include cdn/pygments.html to="head" %}
     {% include cdn/facebook.html to="head" %}
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
@@ -61,8 +61,8 @@
         </footer>
     </div>
 </div>
+{% include cdn/cookieConsent.html to="body" %}
 {% include cdn/jQuery.html to="body" %}
-{% include cdn/cookieConsent2.html to="body" %}
 {% include cdn/pygments.html to="body" %}
 {% include cdn/facebook.html to="body" %}
 {% include google_analytics.html %}
