--- a/_layouts/blueprint.html
+++ b/_layouts/blueprint.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% include cdn/cookieConsent.html to="head" %}
     {% include http_headers.html %}
     {% include meta.html %}
     <title>petrknap/{% if page.name != "index.md" %}-{{ page.name | remove: ".md" }}{% endif %}</title>
     {% include cdn/bootstrap.html to="head" %}
-    {% include cdn/cookieConsent2.html to="head" %}
     {% include cdn/pygments.html to="head" %}
     {% include cdn/font-awesome.html to="head" %}
     <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
@@ -87,9 +87,9 @@
     </div>
 </div>
 
+{% include cdn/cookieConsent.html to="body" %}
 {% include cdn/jQuery.html to="body" %}
 {% include cdn/bootstrap.html to="body" %}
-{% include cdn/cookieConsent2.html to="body" %}
 {% include cdn/pygments.html to="body" %}
 {% include google_analytics.html %}
 </body>
