--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="blog-menu col-md-3">
                 <nav class="blog-menu-links">
-                    {% include links.html a_class="btn btn-link" %}
+                    {% include links.html a_class="btn btn-link btn-sm" %}
                 </nav>
                 <nav class="blog-menu-categories">
                     <ul class="nav nav-pills nav-stacked">
