feat: removed dummy cookie policy link

--- a/_includes/cdn/cookieConsent.html
+++ b/_includes/cdn/cookieConsent.html
@@ -41,6 +41,7 @@
                 "message": "Website uses cookies to distinguish you from other users.",
                 "dismiss": "Decline"
             },
+            "policy": null,
             "type": "opt-in",
             "cookie": {
                 "name": statusCookie
