--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -25,23 +25,23 @@
                 </nav>
                 <nav class="blog-menu-categories">
                     <ul class="nav nav-pills nav-stacked">
-                        {% assign tags_list = site.categories %}
-                        {% for position in (1..99) %}
-                        {% for tag in tags_list %}
-                        {% assign tmp_tag_page = site.pages | where: "category", tag[0] | first %}
-                        {% if tmp_tag_page.position == position %}
-                        <li {% if page.category == tag[0] %}class="active" {% endif %}>
+                        {%- assign tags_list = site.categories -%}
+                        {%- for position in (1..99) -%}
+                        {%- for tag in tags_list -%}
+                        {%- assign tmp_tag_page = site.pages | where: "category", tag[0] | first -%}
+                        {%- if tmp_tag_page.position == position -%}
+                        <li{% if page.category == tag[0] %} class="active"{% endif %}>
                             <a href="{{ tmp_tag_page.url }}.html">
                                 {{ tmp_tag_page.title }}
                                 <span class="badge pull-right">{{ tag[1].size }}</span>
                             </a>
                         </li>
-                        {% break %}
-                        {% endif %}
-                        {% assign tmp_tag_page = null %}
-                        {% endfor %}
-                        {% endfor %}
-                        {% assign tags_list = null %}
+                        {%- break -%}
+                        {%- endif -%}
+                        {%- assign tmp_tag_page = null -%}
+                        {%- endfor -%}
+                        {%- endfor -%}
+                        {%- assign tags_list = null -%}
                     </ul>
                 </nav>
                 <p class="blog-menu-issues small hidden-sm hidden-xs">
